@@ -6,8 +6,8 @@ import time
 # flake8: noqa - we have a lot of locales and this is convenient
 from asm3.locales import *
 
-VERSION = "45u [Mon 29 Nov 11:56:41 GMT 2021]"
-BUILD = "11291156"
+VERSION = "45u [Mon 29 Nov 16:01:16 GMT 2021]"
+BUILD = "11291601"
 
 DMY = ( "%d/%m/%Y", "%d/%m/%y" )
 HDMY = ( "%d-%m-%Y", "%d-%m-%y" )
